# nectar-mailout-notebook

./: .pre-commit-config.yaml  instances.ipynb  jupyterhub.ipynb  mailout_cli.py  mailout_helper.py  pyproject.toml
.binder/: apt.txt  requirements.txt
markdown/: host-planned-outage-notification.md
markdown/fragments/: affected_instances.md  schedule.md  signoff.md
