[project]
name = "nectar-mailout-notebook"
version = "0.1.0"
description = "No description, website, or topics provided."
requires-python = ">=3.13"
dependencies = [
    "gnocchiclient>=7.2.0",
    "jinja2>=3.1.6",
    "kubernetes>=35.0.0",
    "manukaclient>=2.1.0",
    "nectarallocationclient>=2.0.0",
    "nectarclient-lib>=1.4.0",
    "openstacksdk>=4.10.0",
    "placementclient>=1.0.0",
    "python-blazarclient>=4.5.0",
    "python-cinderclient>=9.9.0",
    "python-designateclient>=6.4.0",
    "python-freshdesk>=1.3.9",
    "python-glanceclient>=4.11.0",
    "python-heatclient>=5.1.0",
    "python-keystoneclient>=5.8.0",
    "python-magnumclient>=4.10.0",
    "python-manilaclient>=6.0.0",
    "python-muranoclient>=2.8.0",
    "python-neutronclient>=11.8.0",
    "python-novaclient>=18.12.0",
    "python-swiftclient>=4.10.0",
    "python-troveclient>=8.10.0",
    "requests>=2.32.5",
    "taynacclient>=1.4.2",
    "warreclient>=3.1.2",
]

[project.scripts]
mailout = "mailout_cli:main"